--- a/C2.html
+++ b/C2.html
@@ -1,7 +1,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>
-			百度一下,你就知道
+			数字搜索
 		</title>
 		<link href="" rel="shortcut icon" type="image/x-icon">
 		<style>
@@ -50,11 +50,11 @@
 			<img src="img/1.png">
 		</div>
 		</center>
-		<form action="https://www.baidu.com/s" >
+		<form action="https://www.so.com/s" >
 			<center>
 				<div class="_all">
 					<div class="_in"><input id="wd" name="wd" type="text" autocomplete="off" style="height:40px;width:500px;"></div>
-					<div class="_search"><input type="submit" value="百度一下" style="background-color:#38f;color:#fff;width:107px;height:40px;"><div>
+					<div class="_search"><input type="submit" value="数字搜索" style="background-color:#38f;color:#fff;width:107px;height:40px;"><div>
 				</div>
 			</div></div></center>
 		</form>
