--- a/C2.html
+++ b/C2.html
@@ -50,7 +50,7 @@
 			<img src="img/1.png">
 		</div>
 		</center>
-		<form action="https://www.so.com/s" >
+		<form action="https://www.so.com/?src=none&ls=" >
 			<center>
 				<div class="_all">
 					<div class="_in"><input id="wd" name="wd" type="text" autocomplete="off" style="height:40px;width:500px;"></div>
